# CG-Project-China-Master

./: README.md  计算机图形学期末大程序报告.md
output/: DIYmodel.txt
src/: CMakeLists.txt  bazierface.cpp  bezierface.h  diymodel.cpp  diymodel.h  environment.cpp  final_project.h  flower.cpp  main.cpp
src/base/: bounding_box.h  camera.cpp  camera.h  framebuffer.h  fullscreen_quad.cpp  fullscreen_quad.h  light.h  model.cpp  model.h  skybox.cpp  texture.cpp  texture.h
src/imgui/: CMakeLists.txt  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_tables.cpp  imgui_widgets.cpp
